cha-pre-live-flux2/cha-eks-5a/namespaces/wkfeng-integration/namespace-wkfeng-integration.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: wkfeng-integration
  name: wkfeng-integration
