cha-pre-live-flux2/cha-eks-5a/namespaces/wkfeng-integration/network-policy-apps.yaml
####################################################
## Allow ingress from wkfeng-integration and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-wkfeng-integration
  namespace: wkfeng-integration
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: wkfeng-integration
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################
## Allow egress from wkfeng-integration ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-wkfeng-integration
  namespace: wkfeng-integration
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: wkfeng-integration
#########################################
################
## ICIS monitoring ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: wkfeng-integration
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring

#################################################
## Access for Postgres RDS ### 

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-postgres-external
  namespace: wkfeng-integration
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 5432
      protocol: TCP
#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: wkfeng-integration
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
